# full-pun-generation

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: evaluation.jsonl  headlines.jsonl  ignore_pron_words.txt  processed_headlines.jsonl
data/evaluation/: annotator_0.jsonl  annotator_1.jsonl  annotator_10.jsonl  annotator_11.jsonl  annotator_12.jsonl  annotator_13.jsonl  annotator_14.jsonl  annotator_15.jsonl  annotator_16.jsonl  annotator_17.jsonl  annotator_18.jsonl  annotator_19.jsonl  annotator_2.jsonl  annotator_20.jsonl  annotator_21.jsonl  annotator_3.jsonl  annotator_4.jsonl  annotator_5.jsonl  annotator_6.jsonl  annotator_7.jsonl  annotator_8.jsonl  annotator_9.jsonl
evaluation_interface/: 1_🏠_Início.py  README.md
evaluation_interface/.streamlit/: config.toml
evaluation_interface/backend/: app.py  auth.py  evaluation_store.py  generation_processor.py
evaluation_interface/config/: config.yaml  credentials.yaml  style.css
evaluation_interface/frontend/: package-lock.json  package.json
evaluation_interface/pages/: 2_✍️_Avaliação.py
evaluation_interface/utils/: __init__.py  process_generations.py  resources.py
results/evaluation/: evaluator_1.jsonl  evaluator_10.jsonl  evaluator_11.jsonl  evaluator_12.jsonl  evaluator_13.jsonl  evaluator_14.jsonl  evaluator_15.jsonl  evaluator_16.jsonl  evaluator_17.jsonl  evaluator_18.jsonl  evaluator_19.jsonl  evaluator_2.jsonl  evaluator_20.jsonl  evaluator_21.jsonl  evaluator_22.jsonl  evaluator_23.jsonl  evaluator_24.jsonl  evaluator_3.jsonl  evaluator_4.jsonl  evaluator_5.jsonl  evaluator_6.jsonl  evaluator_7.jsonl  evaluator_8.jsonl  evaluator_9.jsonl
results/evaluation.jsonl/: admin.jsonl  hugo.jsonl
results/generation/: deepseek-r1-70b.jsonl  deepseek-r1-70b_definitions.jsonl  deepseek-r1-70b_fewshot.jsonl  deepseek-r1-70b_fewshot_definitions.jsonl  llama3-3.jsonl  llama3-3_definitions.jsonl  llama3-3_fewshot.jsonl  llama3-3_fewshot_definitions.jsonl  ptt5-v2.jsonl  ptt5-v2_definitions.jsonl
results/predictions/: ptt5-v2.jsonl
scripts/: create_evaluation_pairs.py  generation.py  generation_ollama.py  prepare_headlines.py  puntuguese_senses_similarity.py  train_generation.py  translate.py
scripts/analysis/: analyze_puntuguese_senses.py  evaluation_analysis.py  examples.py  presentation_examples.py
scripts/generation/: generate_ollama_jokes.py  generate_t5_jokes.py
scripts/preprocessing/: preprocess_evaluation.py  preprocess_headlines.py
(+10 files in other folders)
