[project]
name = "full-pun-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gradio>=4.44.1",
    "keybert>=0.8.5",
    "nltk>=3.9.1",
    "spacy>=3.8.3",
]

[project.scripts]
gradio = "full_pun_generation.interface:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pip>=24.3.1",
]
